release/1.7.4/VERSION.md
# 1.7.4

## Version

|**Data**        | **Value**                 |
|----------------|-------------------------|
| ID   | ```1.7.4```   |
| Release Time   | ```2013-12-09T12:28:10+00:00```   |
| Type   | ```release```   |

## Assets

|**Data**        | **Value**                 |
|----------------|-------------------------|
| id   | ```1.7.4```   |
| sha1   | ```545510a60f526b9aa8a38f9c0bc7a74235d21675```   |
| size   | ```59675```   |
| total size  | ```112252715```  |
| url       | ```https://launchermeta.mojang.com/v1/packages/545510a60f526b9aa8a38f9c0bc7a74235d21675/1.7.4.json``` |

## Client

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```900950d8e3217b3a42405d1ecf767dcc31239d69```   |
| size   | ```5206443```   |
| url       | ```https://launcher.mojang.com/v1/objects/900950d8e3217b3a42405d1ecf767dcc31239d69/client.jar``` |

## Server

|**Data**        | **Value**                 |
|----------------|-------------------------|
| sha1   | ```61220311cef80aecc4cd8afecd5f18ca6b9461ff```   |
| size   | ```9170551```   |
| url       | ```https://launcher.mojang.com/v1/objects/61220311cef80aecc4cd8afecd5f18ca6b9461ff/server.jar``` |

## Java

|**Data**        | **Value**                 |
|----------------|-------------------------|
| component   | ```jre-legacy```   |
| version   | ```8```   |